overflow fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -436,6 +436,7 @@ body{
         }
     }
     &__front{
+        overflow: hidden;
         transform: translateZ(75px);
     }
     &__back{
